# sxBlend

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Application.cpp.2974FECF664E59A6.idx  Application.h.4B16160E29EB29FB.idx  Camera.cpp.68A89F2855425B8B.idx  Camera.h.3D909B721B1BD91A.idx  Importer.hpp.729A3420DCE05E9F.idx  Light.cpp.B5DA82B3BDE6143B.idx  Light.h.496AE200AC9DCDD9.idx  LightManager.cpp.D5A312A20862C0AB.idx  LightManager.h.9143BDDDEA7C559C.idx  MathFunctions.h.CADC893150E2A50E.idx  Menu.cpp.D00FBB5940AABA92.idx  Menu.h.5666CDF6436A139E.idx  Mesh.cpp.D9795C9E42E4BF46.idx  Mesh.h.A853AF712D03355B.idx  MeshBoolean.cpp.9F7617A02CCFF686.idx  MeshBoolean.h.1E7FDCDCE26D7EC3.idx  MeshManager.cpp.25C545EDF9B8FFF5.idx  MeshManager.h.9523EFE6D95D0CE0.idx  Model.cpp.37833DBDF9DD3EF3.idx  Model.h.D542FCF97AF25FA6.idx  PhysicsWorld.cpp.EF0EB6775BE8CB41.idx  PhysicsWorld.h.9ECC57CD0B8CBEC3.idx  Reflection.cpp.84F06900CA79CC20.idx  Reflection.h.3CEF25EB1FFD4EB1.idx  Shader.cpp.5E81CC994E2ED46E.idx  Shader.h.879725AE2380B40A.idx  ShaderManager.cpp.B2A62B1564DA9883.idx  ShaderManager.h.145E4A86B92BD17A.idx  Shadow.cpp.6E5A69D9B569CF21.idx  Shadow.h.E79356DC54E27070.idx  Skybox.cpp.2E8E7B9A8741DABB.idx  Skybox.h.B680958B5D750337.idx  Vertex.h.4240D1EDD5BDE23C.idx  _fixes.hpp.9CB29C4D8DB8900B.idx  _vectorize.hpp.43CFFCFB9F95F786.idx  aabb.h.6D061A69C9557D51.idx  anim.h.52039E3D4F6DD70F.idx  appMain.cpp.FA4B916E810E848D.idx  camera.h.CB2F80890E50BDCB.idx  closest_point.hpp.E25B0DE03688DDD9.idx  (+249 more)
include/GL/: glad.cpp  glad.h
include/imgui/: imgui_impl_glfw.cpp
include/manifold/: manifold.h  vec_view.h
include/sblend/: Application.cpp  Application.h  Camera.cpp  Camera.h  LightManager.cpp  LightManager.h  Menu.cpp  Menu.h  MeshBoolean.cpp  MeshBoolean.h  MeshManager.cpp  MeshManager.h  ShaderManager.cpp  ShaderManager.h  Terrain.cpp  Terrain.h
include/sblend/graphics/: Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Reflection.cpp  Reflection.h  Shader.cpp  Shader.h  Shadow.cpp  Shadow.h  Skybox.cpp  Skybox.h  Vertex.h
include/sblend/physics/: PhysicsWorld.cpp  PhysicsWorld.h
models/2010_audi_r8_v10_5.2_fsi_quattro/: license.txt  scene.gltf
models/city/: license.txt  scene.gltf
models/leather_sofa_3d_model/: license.txt  scene.gltf
models/nissan_gtrs_-_max_nfs_most_wanted_bmw_version/: license.txt  scene.gltf
models/suzanne/: license.txt  scene.gltf
output/Debug/: .sblend  imgui.ini  monkey.gltf  refl.sblend  reflt.sblend  rm.sblend  roll.sblend  sample.sblend  shadow.sblend  simu.sblend  som.sblend  test.sblend  test2.sblend  textures.sblend
output/Debug/aang/: license.txt  scene.gltf
output/Debug/cub/: testCub.gltf
output/Debug/roll/: license.txt  scene.gltf
output/Debug/teapot/: license.txt  scene.gltf
output/Debug/test/: cub.gltf  test.gltf  test.mtl
output/Release/: imgui.ini  models.sblend  spInd.sblend  test.sblend
output/Release/sponza/: LICENSE.txt
output/Release/weathered_ak47/: license.txt  scene.gltf
shaders/: basic.frag  basic.vert  lightning.frag  modelBasic.frag  modelLightning.frag  modelPbrLightning.frag  pbrLightning.frag  reflection.frag  skyBox.frag  skyBox.vert  terrainBasic.frag  terrainLightning.frag  terrainPbrLightning.frag
src/: appmain.cpp
